# spmd_types

./: LICENSE  README.md  pyproject.toml  test_api.py
dte/: _api.py  _checker.py  types.py
sixlib/spmd_types/: .gitignore  CLAUDE.md  DESIGN.md  MEGATRON_QUICKSTART.md  __init__.py  _checker.py  _collectives.py  _dtensor.py  _dtensor_checker.py  _local.py  _mesh.py  _mesh_axis.py  _mesh_region.py  _raw_dist.py  _scalar.py  _state.py  _test_utils.py  _traceback.py  _type_attr.py  _vmap.py  api_test.py  checker_test.py  collectives_test.py  dtensor_test.py  dynamo_test.py  global_spmd_test.py  local_test.py  mesh_axis_test.py  mesh_region_test.py  mesh_test.py  traceback_test.py  types.py  types_test.py  vmap_test.py
